--- a/build.gradle
+++ b/build.gradle
@@ -19,17 +19,22 @@ repositories {
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.security:spring-security-test'
-	runtimeOnly 'mysql:mysql-connector-java'
 	implementation("com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3")
 	implementation("org.bouncycastle:bcprov-jdk15on:1.64")
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	//validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	//lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//database
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'mysql:mysql-connector-java'
 
 	//spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -39,6 +44,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+	//email
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
